--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
+    "supabase": "^2.33.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "4.1.7",
