--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.43.1",
+    "ioredis": "^5.6.1",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
@@ -33,6 +35,7 @@
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.6.1",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
     "supabase": "^2.33.5",
@@ -41,6 +44,7 @@
     "tailwindcss": "4.1.7",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   }
 }
