- Updated Vercel configuration to use a wildcard for API functions.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-      "agent/api_server.py": {
+      "api/**": {
         "excludeFiles": "{.next,.git,node_modules}/**"
       }
     }
