--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000
 AUTH_SECRET=***
+
+# Python Agent API Keys (for E2B and OpenRouter)
+OPENROUTER_API_KEY=***
+E2B_API_KEY=***
+
+# Vercel deployment URL (auto-populated after deployment)
+VERCEL_URL=your-app-name.vercel.app
