Refactor agent API routes to use new endpoint structure and update related configurations. Remove deprecated files and adjust .gitignore and .vercelignore for cleaner project management.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ postgres_data/
 .env*.local
 
 #python-agent
-agent/__pycache__
+.venv
+__pycache__
 
-ai-sdk-preview-python-streaming-main
+/agent
+
+/ai-sdk-preview-python-streaming-main
