Added full name to sign up page

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,5 @@
 POSTGRES_URL=postgresql://***
 STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
-BASE_URL=http://localhost:3000
-AUTH_SECRET=***
+BASE_URL=http://localhost:3000 #or the deployment 
 
-# Python Agent API Keys (for E2B and OpenRouter)
-OPENROUTER_API_KEY=***
-E2B_API_KEY=***
-
-# Vercel deployment URL (auto-populated after deployment)
-VERCEL_URL=your-app-name.vercel.app
