Refactor chat message handling to support streaming responses; update API interaction and UI for real-time message updates

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ __pycache__
 /ai-sdk-preview-python-streaming-main
 /vercel examples main python-nextjs-flask
 /supabase-auth-example
+/Coding Agent API
