--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,26 @@
 # This is an example of your .env file format, which pnpm db:setup will create.
-# Note: this must be .env, not .env.local, without further configuration changes.
+# Note: this must be .env, without further configuration changes.
 POSTGRES_URL=postgresql://***
 STRIPE_SECRET_KEY=sk_test_***
 STRIPE_WEBHOOK_SECRET=whsec_***
 BASE_URL=http://localhost:3000 #or the deployment 
 
+#Auth
+NEXT_PUBLIC_SUPABASE_URL=https://***.supabase.co
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=sb_publishable_-***
+
+#Optional Webhook
+NGROK_URL=''
+REDIS_URL="redis://default:***"
+
+
+#Coding Agent API env keys
+OPENROUTER_API_KEY=***
+E2B_API_KEY=e2b_***
+NEXT_PUBLIC_AGENT_API_BASE_URL=***
+
+#Optional Agent Observability
+LANGSMITH_TRACING="true"
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY=lsv2_pt_***
+LANGSMITH_PROJECT="***"
